<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.main.view.ContactActivity">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/contact_name"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/text_xxl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_name">

        <TextView
            android:id="@+id/textView_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_email_label"
            android:textSize="@dimen/text_l"
            app:layout_constraintEnd_toEndOf="@id/textView_telephone_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xs"
            android:onClick="contactEmail"
            android:text="@string/contact_email"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/text_l"
            app:layout_constraintStart_toEndOf="@id/textView_email_label"
            app:layout_constraintTop_toTopOf="@id/textView_email_label" />

        <TextView
            android:id="@+id/textView_telephone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_telephone_label"
            android:textSize="@dimen/text_l"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_email_label" />

        <TextView
            android:id="@+id/textView_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xs"
            android:text="@string/contact_telephone"
            android:textColor="@color/purple_500"
            android:onClick="launchSite"
            android:textSize="@dimen/text_l"
            app:layout_constraintStart_toEndOf="@id/textView_telephone_label"
            app:layout_constraintTop_toTopOf="@id/textView_telephone_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/contact_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>